[REFACTOR] Clean code smells